option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', value: 'enabled')
option('transport-api', type: 'feature', description: 'Enable transport(eg mctp) APIs', value: 'enabled')
option('utilities', type: 'feature', description: 'Enable debug utilities', value: 'enabled')
